# shoulders

./: .gitignore  README.md  index.html  package.json  tailwind.config.js  vite.config.js
.claude/: CLAUDE.md
.github/workflows/: build.yml  deploy-web.yml
docs/: _MAP.md  admin-system.md  ai-system.md  architecture.md  auth-system.md  building.md  canvas-implementation.md  comments-system.md  editor-system.md  file-system.md  ghost-work.md  git-system.md  gotchas.md  markdown-system.md  notebook-system.md  review-system.md  rmd-system.md  sqlite-infrastructure.md  state-management.md  style-guide.md  supercite-system.md  superdoc-system.md  superdoc-toc.md  terminal-system.md  tex-system.md  ui-layout.md  usage-system.md  web-backend.md  web-peer-review.md  web-style-guide.md  web-triage.md  wiki-links.md
src/: App.vue  main.js  platform.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chat.rs  fs_commands.rs  git.rs  kernel.rs  latex.rs  lib.rs  main.rs  pty.rs  typst_export.rs  usage_db.rs
src/components/: GitHubConflictDialog.vue  Launcher.vue  SearchResults.vue  SetupWizard.vue  VersionHistory.vue
src/css/: comments.css  components.css  editor.css  fonts.css  handsontable.css  superdoc.css  themes.css  xterm.css
src/editor/: chunkOutputs.js  citations.js  codeChunks.js  comments.js  diffOverlay.js  docxCitations.js  docxGhost.js  docxHeadingNormalize.js  (+11 more)
web/: .env.example  .gitignore  drizzle.config.js  error.vue  nuxt.config.js  package-lock.json  package.json  tailwind.config.js
(+362 files in other folders)
