[package]
name = "shoulders"
version = "0.2.0"
edition = "2021"

[lib]
name = "shoulders_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
portable-pty = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
regex-lite = "0.1"
zeromq = "0.4"
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
bytes = "1"
flate2 = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
url = "2"
pulldown-cmark = { version = "0.12", features = ["simd"] }
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2", "vendored-openssl", "https"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSUserDefaults", "NSArray", "NSRange"] }
objc2-app-kit = { version = "0.3", features = ["NSSpellChecker", "NSPanel", "NSWindow", "NSResponder"] }
